--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   width: 100%;
   height: 100%;
   font-family: Helvetica,Arial,sans-serif;
@@ -77,4 +77,4 @@ button {
   height: 60px;
   background-color: #000000;
   color: #ffffff;
-}
+} */
